Hinzufügen operationelle_anforderungen

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -94,7 +94,7 @@ Jahr & gZahl *4stellig* \\
 \hline
 Verlag & Zeichenkette40 \\
 \hline
-ISBN & gZahl *1stellig* + '-' + gZahl *4stellig* + '-' + gZahl *4stellig* + '-' + gZahl *1stellig* \textbf{DAS STIMMT LAUT WIKIPEDIA NICHT}\\
+ISBN & Zeichenkette20 \\
 \hline
 Beschreibung & Zeichenkette250 \\
 \hline
