--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -224,6 +224,11 @@ das jeweilige Buch. Mit dem Knopf am Ende der Liste (und entsprechenden Rechten)
 Alle verf"ugbaren Information zum Buch werden hier aufgelistet. Hat man entsprechende Privilegien kann man auch
 Bearbeiten/l"oschen oder Kommentare hinzuf"ugen/l"oschen.
 
+\subsubsection{Literatur bearbeiten/hinzuf"ugen}
+\includegraphics[scale=0.6]{litmod.png}
+
+Hier kann Literatur bearbeitet oder hinzugef"ugt werden. Die Art der Literatur ist "uber eine Selectbox ausw"ahlbar.
+
 \subsubsection{Suchergebnisse}
 \includegraphics[scale=0.6]{search.png}
 
@@ -238,4 +243,5 @@ Daten modifiziert oder hinzugef"ugt werden.
 \subsubsection{Nutzer bearbeiten/hinzuf"ugen}
 \includegraphics[scale=0.6]{usermod.png}
 
-Hier werden nutzerspezifische Daten und das Passwort ge"andert.
+Hier werden nutzerspezifische Daten und das Passwort ge"andert. Die Rechtevergabe steht nur zur Auswahl wenn
+der angemeldete Nutzer selbst Administrator ist.
