--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -170,7 +170,7 @@ Mitgliederliste & \{Mitglieds\_Nr + Name\}\\
 
 \subsubsection{Beziehungen zwischen Speichern (ERD)}
 TODO:
-%\includegraphics[scale=0.5]{erd}
+\includegraphics[scale=0.35]{erd1.png}
 
 \subsubsection{Prozessspezifikation}
 \input{pspec_bibliotheksverwaltung}
