--- a/trunk/docs/beleg1/pspec_mitgliederverwaltung.tex
+++ b/trunk/docs/beleg1/pspec_mitgliederverwaltung.tex
@@ -50,7 +50,7 @@
 \end{tabular}
 
 \hrulefill\\
-\textbf{Voraussetzung}: Benutzer muss als Administrator angemeldet sein.
+\textbf{Voraussetzung}: Benutzer ist angemeldet. Mitglied.Mitglieds\_Nr ist die Nummer des aktuell angemeldeten Nutzers (außer er ist Administrator)
 \begin{verbatim}
   BEGIN
    Setze in Mitglieder Mitglied_Eintrag
