--- a/trunk/docs/beleg1/pspec_literaturinformation.tex
+++ b/trunk/docs/beleg1/pspec_literaturinformation.tex
@@ -29,6 +29,27 @@
 \end{verbatim}
 \hrulefill
 
+% Literatur_Neuigkeiten_anzeigen
+\paragraph{Literatur\_Neuigkeiten\_anzeigen}
+\begin{tabular}[t]{p{9.5cm}ll}
+\textbf{Prozess}: Literatur\_Neuigkeiten\_anzeigen  	&\textbf{Datum}:      &21.04.2006\\
+					&\textbf{Bearbeiter}: &S. Eckelmann\\
+\end{tabular}
+
+\hrulefill\\
+\textbf{Voraussetzung}: -
+\begin{verbatim}
+ BEGIN
+   Finde 10 Einträge mit den höchsten Literatur_Nr in Bibliothek
+
+   IF erfolgreich THEN
+      Setze Letzte_Literatur := gefundene_Literatur
+   ELSE
+      Setze Fehler 402
+ END
+\end{verbatim}
+\hrulefill
+
 
 % Literatur_suchen
 \paragraph{Literatur\_suchen}
@@ -60,7 +81,7 @@
    IF gefunden THEN
      Setz Suchtreffer := gefundene_Literatur
    ELSE
-     Setze Fehler 402
+     Setze Fehler 403
  END
 \end{verbatim}
 \hrulefill
