von trusch entferntes \endhead in Datenkatalog unter operationelle Anforderungen wieder hinzugefügt

--- a/trunk/docs/beleg1/operationelle_anforderungen.tex
+++ b/trunk/docs/beleg1/operationelle_anforderungen.tex
@@ -9,7 +9,7 @@ dass für die Speicherung von in der Regel (bis auf wenige Ausnahmen, für die d
 \hline
 Element & Struktur & Bytes\\
 \hline\hline
-%\endhead
+\endhead
 
 Literatur & @Literatur\_Nr + Art + Titel + Autor + (Jahr) + (Verlag) + (ISBN) + (Beschreibung) + (Ort) + (Stichworte) & $4 + 13 + 40 + 40 + 2 + 40 + 20 + 250 + 40 + 100 = 549$ \\
 \hline
