--- a/trunk/docs/beleg1/basismaschine_umgebung.tex
+++ b/trunk/docs/beleg1/basismaschine_umgebung.tex
@@ -3,13 +3,13 @@
 \subsection{Hardwarekonfiguration}
 F"ur {\bf Webserver} wird folgende Ausstattung ben"otigt:
 \begin{itemize}
- \item Server (Monitor)
+ \item Server (Monitor wird nicht ben"otigt)
  \item Breitband-Netzwerk (z. B. SDSL, Ethernet)
  \item 5 MB Festplattenspeicher
 \end{itemize}
 Als notwendige Minimalausstattung des für den {\bf Nutzer-PC} wird vorgeschlagen:
 \begin{itemize}
- \item Basis-PC (Tastatur, Maus, 15" Farbmonitor)
+ \item Basis-PC (Tastatur, Maus, Monitor)
  \item Netzwerk (z. B. Modem, Ethernet)
 \end{itemize}
 Da die Nutzung des Systems komplett Serverseitig funktioniert wird auf dem Nutzer-PC kein Festplattenspeicher verbraucht, da die
