--- a/trunk/docs/beleg1/operationelle_anforderungen.tex
+++ b/trunk/docs/beleg1/operationelle_anforderungen.tex
@@ -152,5 +152,5 @@ zu gr\"o\"seren Datenstr\"omen kommt.
 
 
 \section{Operationelle Anforderungen an die Prozesse}
-Es wird von Antwortzeien bis zu 5 Sekunden gerechnet. Da die meisten Prozesse auf dem Server verarbeitet werden und der Client diese nur Darstellen muss, 
+Es wird von Antwortzeiten bis zu 5 Sekunden gerechnet. Da die meisten Prozesse auf dem Server verarbeitet werden und der Client diese nur Darstellen muss, 
 kann von 5 Sekunden ausgegangen werden. 
